# tradingsystems

./: README.md  requirements.txt  setup.cfg  setup.py
tests/: ts_entry_tests.py  ts_exit_tests.py  ts_stop_tests.py  ts_ticker_tests.py
tradingsystems/: __init__.py  dollar_exits.py  graphs.py  indicator_entries.py  indicator_exits.py  ma_entries.py  marketdata.py  pnl.py  positions.py  reports.py  signals.py  systems.py  systems_params.py  targets.py  trades.py  utils.py  winloss.py
