[metadata]
name = tradingsystems

url = https://github.com/GBERESEARCH/tradingsystems

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: tradingsystems.__version__

description = End of day backtesting of Technical trading rules.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy >= 1.16.2
    pandas >= 1.0.0
    scipy >= 1.4.1
    norgatedata >= 1.0.48
    technicalmethods >= 0.1.6
    yfinance >= 0.2.40
    requests >= 2.24.0
    matplotlib >= 3.4.2

[options.packages.find]
where=src